SLI-1099 Emphasize new issues in the 'Current file' tab when focusing on new code