@@ -40,15 +40,19 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import javax.swing.JScrollPane;
 import org.jetbrains.annotations.NonNls;
 import org.sonarlint.intellij.SonarLintIcons;
 import org.sonarlint.intellij.common.util.SonarLintUtils;
+import org.sonarlint.intellij.finding.LiveFinding;
 import org.sonarlint.intellij.finding.issue.LiveIssue;
 import org.sonarlint.intellij.messages.StatusListener;
 import org.sonarlint.intellij.util.SonarLintActions;
 
+import static java.util.function.Predicate.not;
+import static org.sonarlint.intellij.config.Settings.getGlobalSettings;
 import static org.sonarlint.intellij.ui.SonarLintToolWindowFactory.createSplitter;
 import static org.sonarlint.intellij.ui.UiUtils.runOnUiThread;
 
@@ -59,6 +63,8 @@ public class CurrentFilePanel extends AbstractIssuesPanel {
   private final JBPanelWithEmptyText issuesPanel;
   private final JScrollPane treeScrollPane;
   private final AnAction analyzeFilesAction = ActionManager.getInstance().getAction("SonarLint.AnalyzeFiles");
+  private VirtualFile currentFile;
+  private Collection<LiveIssue> currentIssues;
 
   public CurrentFilePanel(Project project) {
     super(project);
@@ -111,11 +117,15 @@ public class CurrentFilePanel extends AbstractIssuesPanel {
   }
 
   public void update(@Nullable VirtualFile file, @Nullable Collection<LiveIssue> issues) {
+    currentFile = null;
+    currentIssues = null;
     var statusText = issuesPanel.getEmptyText();
     String emptyText;
     Collection<LiveIssue> liveIssues = issues;
     if (file != null) {
-      emptyText = liveIssues == null ? "No analysis done on the current opened file" : "No issues found in the current opened file";
+      var focusWord = getGlobalSettings().isFocusOnNewCode() ? "new " : "";
+      var sinceText = getGlobalSettings().isFocusOnNewCode() ? "since XXX " : "";
+      emptyText = liveIssues == null ? "No analysis done on the current opened file" : "No " + focusWord + "issues " + sinceText + "found in the current opened file";
       statusText.setText(emptyText);
       if (liveIssues == null && (analyzeFilesAction.getTemplateText() != null)) {
         statusText.appendLine(analyzeFilesAction.getTemplateText(), SimpleTextAttributes.LINK_PLAIN_ATTRIBUTES,
@@ -139,9 +149,20 @@ public class CurrentFilePanel extends AbstractIssuesPanel {
       treeBuilder.updateModel(Map.of(), emptyText);
       oldTreeBuilder.updateModel(Map.of(), emptyText);
     } else {
+      this.currentFile = file;
+      this.currentIssues = issues;
       disableEmptyDisplay(!issues.isEmpty());
-      treeBuilder.updateModel(Map.of(file, issues), emptyText);
-      oldTreeBuilder.updateModel(Map.of(file, issues), emptyText);
+      if (getGlobalSettings().isFocusOnNewCode()) {
+        var oldIssues = issues.stream().filter(not(LiveFinding::isOnNewCode)).collect(Collectors.toList());
+        var newIssues = issues.stream().filter(LiveFinding::isOnNewCode).collect(Collectors.toList());
+        treeBuilder.updateModel(Map.of(file, newIssues), emptyText);
+        oldTreeBuilder.updateModel(Map.of(file, oldIssues), "No older issues");
+        oldTree.setVisible(true);
+      } else {
+        treeBuilder.updateModel(Map.of(file, issues), emptyText);
+        oldTreeBuilder.updateModel(Collections.emptyMap(), emptyText);
+        oldTree.setVisible(false);
+      }
     }
     expandTree();
     updateIcon(file, issues);
@@ -193,5 +214,11 @@ public class CurrentFilePanel extends AbstractIssuesPanel {
     treeBuilder.refreshModel(project);
     oldTreeBuilder.refreshModel(project);
     expandTree();
+  }
+
+  public void setFocusOnNewCode(boolean isFocusOnNewCode) {
+    tree.setShowsRootHandles(isFocusOnNewCode);
+    oldTree.setShowsRootHandles(isFocusOnNewCode);
+    update(currentFile, currentIssues);
   }
 }
